# toDoParcer

./: LICENSE.md  README.md
.github/: copilot-instructions.md
toDoParcer/: Cargo.toml  Makefile  README.md  docs.md
toDoParcer/examples/: project.txt
toDoParcer/src/: grammar.pest  lib.rs  main.rs  parser.rs
toDoParcer/tests/: unit_tests.rs
