[package]
name = "to_do_parcer"
path = "src/lib.rs"
version = "0.2.0"
edition = "2024"
authors = ["Tanya Khaimyk <t.khaimyk@ukma.edu.ua>"]
license = "MIT"
description = """
Rust parser for a custom task management with projects, dependencies, priorities, assignees,
 and tags. Used to describe the flow of tasks in text format.
"""


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
peg = "0.8.5"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
